--- a/index.html
+++ b/index.html
@@ -4,13 +4,19 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Document</title>
+        <title>1.9</title>
         <script
             src="https://kit.fontawesome.com/de7be06a7c.js"
             crossorigin="anonymous"
         ></script>
         <link
             href="https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css"
+            rel="stylesheet"
+        />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Dosis:wght@300;400;500;600&family=Open+Sans&family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800&display=swap"
             rel="stylesheet"
         />
         <link rel="stylesheet" href="./assets/style/style.css" />
@@ -49,6 +55,23 @@
                         <li class="item show">
                             <a href="#">drop down</a>
                             <i class="fa-solid fa-angle-down"></i>
+                            <ul class="dropdown">
+                                <li>
+                                    <a href="#">Drop Down 1</a>
+                                </li>
+                                <li>
+                                    <a href="#">Deep Drop Down </a>
+                                </li>
+                                <li>
+                                    <a href="#">Drop Down 2</a>
+                                </li>
+                                <li>
+                                    <a href="#">Drop Down 3</a>
+                                </li>
+                                <li>
+                                    <a href="#">Drop Down 4</a>
+                                </li>
+                            </ul>
                         </li>
                         <li class="item">
                             <a href="#">contact</a>
@@ -454,10 +477,36 @@
                 </div>
                 <div class="team__content">
                     <div class="team__content-item">
-                        <img src="./assets/img/team-2.png" alt="" />
+                        <img src="./assets/img/team-1.png" alt="" />
                         <div class="team-i4">
-                            <h3>Sarah Jhonson</h3>
-                            <p>Product Manager</p>
+                            <h3>Walter White</h3>
+                            <p>Chief Executive Officer</p>
+                        </div>
+                        <!-- Show Link Icon -->
+                        <div class="show-team-icon">
+                            <ul class="our-social-networks-list">
+                                <li class="our-social-networks-icon">
+                                    <a href="#">
+                                        <i class="fa-brands fa-twitter"></i>
+                                    </a>
+                                </li>
+                                <li class="our-social-networks-icon">
+                                    <a href="#">
+                                        <i class="fa-brands fa-facebook-f"></i>
+                                    </a>
+                                </li>
+                                <li class="our-social-networks-icon">
+                                    <a href="#">
+                                        <i class="fa-brands fa-instagram"></i>
+                                    </a>
+                                </li>
+
+                                <li class="our-social-networks-icon">
+                                    <a href="#">
+                                        <i class="fa-brands fa-linkedin-in"></i>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </div>
 
@@ -468,21 +517,99 @@
                             <h3>Sarah Jhonson</h3>
                             <p>Product Manager</p>
                         </div>
-                    </div>
-                    <div class="div"></div>
-                    <div class="team__content-item">
-                        <img src="./assets/img/team-2.png" alt="" />
-                        <div class="team-i4">
-                            <h3>Sarah Jhonson</h3>
-                            <p>Product Manager</p>
+                        <!-- Show Link Icon -->
+                        <div class="show-team-icon">
+                            <ul class="our-social-networks-list">
+                                <li class="our-social-networks-icon">
+                                    <a href="#">
+                                        <i class="fa-brands fa-twitter"></i>
+                                    </a>
+                                </li>
+                                <li class="our-social-networks-icon">
+                                    <a href="#">
+                                        <i class="fa-brands fa-facebook-f"></i>
+                                    </a>
+                                </li>
+                                <li class="our-social-networks-icon">
+                                    <a href="#">
+                                        <i class="fa-brands fa-instagram"></i>
+                                    </a>
+                                </li>
+
+                                <li class="our-social-networks-icon">
+                                    <a href="#">
+                                        <i class="fa-brands fa-linkedin-in"></i>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </div>
                     <div class="div"></div>
                     <div class="team__content-item">
-                        <img src="./assets/img/team-2.png" alt="" />
+                        <img src="./assets/img/team-3.png" alt="" />
                         <div class="team-i4">
-                            <h3>Sarah Jhonson</h3>
-                            <p>Product Manager</p>
+                            <h3>William Anderson</h3>
+                            <p>CTO</p>
+                        </div>
+                        <!-- Show Link Icon -->
+                        <div class="show-team-icon">
+                            <ul class="our-social-networks-list">
+                                <li class="our-social-networks-icon">
+                                    <a href="#">
+                                        <i class="fa-brands fa-twitter"></i>
+                                    </a>
+                                </li>
+                                <li class="our-social-networks-icon">
+                                    <a href="#">
+                                        <i class="fa-brands fa-facebook-f"></i>
+                                    </a>
+                                </li>
+                                <li class="our-social-networks-icon">
+                                    <a href="#">
+                                        <i class="fa-brands fa-instagram"></i>
+                                    </a>
+                                </li>
+
+                                <li class="our-social-networks-icon">
+                                    <a href="#">
+                                        <i class="fa-brands fa-linkedin-in"></i>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="div"></div>
+                    <div class="team__content-item">
+                        <img src="./assets/img/team-4.png" alt="" />
+                        <div class="team-i4">
+                            <h3>Amanda Jepson</h3>
+                            <p>Accountant</p>
+                        </div>
+                        <!-- Show Link Icon -->
+                        <div class="show-team-icon">
+                            <ul class="our-social-networks-list">
+                                <li class="our-social-networks-icon">
+                                    <a href="#">
+                                        <i class="fa-brands fa-twitter"></i>
+                                    </a>
+                                </li>
+                                <li class="our-social-networks-icon">
+                                    <a href="#">
+                                        <i class="fa-brands fa-facebook-f"></i>
+                                    </a>
+                                </li>
+                                <li class="our-social-networks-icon">
+                                    <a href="#">
+                                        <i class="fa-brands fa-instagram"></i>
+                                    </a>
+                                </li>
+
+                                <li class="our-social-networks-icon">
+                                    <a href="#">
+                                        <i class="fa-brands fa-linkedin-in"></i>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </div>
                 </div>
@@ -505,30 +632,30 @@
                     </div>
                     <div class="div"></div>
                     <div class="gallery-img">
-                        <img src="./assets/img/gallery-1.png" alt="gallery-1" />
+                        <img src="./assets/img/gallery-2.png" alt="gallery-1" />
                     </div>
                     <div class="div"></div>
                     <div class="gallery-img">
-                        <img src="./assets/img/gallery-1.png" alt="gallery-1" />
+                        <img src="./assets/img/gallery-3.png" alt="gallery-1" />
                     </div>
                     <div class="div"></div>
                     <div class="gallery-img">
-                        <img src="./assets/img/gallery-1.png" alt="gallery-1" />
+                        <img src="./assets/img/gallery-4.png" alt="gallery-1" />
                     </div>
                     <div class="gallery-img">
-                        <img src="./assets/img/gallery-1.png" alt="gallery-1" />
-                    </div>
-                    <div class="div"></div>
-                    <div class="gallery-img">
-                        <img src="./assets/img/gallery-1.png" alt="gallery-1" />
+                        <img src="./assets/img/gallery-5.png" alt="gallery-1" />
                     </div>
                     <div class="div"></div>
                     <div class="gallery-img">
-                        <img src="./assets/img/gallery-1.png" alt="gallery-1" />
+                        <img src="./assets/img/gallery-6.png" alt="gallery-1" />
                     </div>
                     <div class="div"></div>
                     <div class="gallery-img">
-                        <img src="./assets/img/gallery-1.png" alt="gallery-1" />
+                        <img src="./assets/img/gallery-7.png" alt="gallery-1" />
+                    </div>
+                    <div class="div"></div>
+                    <div class="gallery-img">
+                        <img src="./assets/img/gallery-8.png" alt="gallery-1" />
                     </div>
                 </div>
             </div>
@@ -603,7 +730,13 @@
                                     <input type="text" placeholder="Subject" />
                                 </div>
                                 <div class="message">
-                                    <input type="text" placeholder="Message" />
+                                    <textarea
+                                        name="mess"
+                                        id="message"
+                                        rows="7"
+                                        placeholder="Message"
+                                    >
+                                    </textarea>
                                 </div>
                                 <button id="submit-btn" type="submit">
                                     Send Message
@@ -613,7 +746,137 @@
                     </div>
                 </div>
             </div>
+            <div class="newsletter">
+                <div class="newsletter__inner">
+                    <h2>Join Our Newsletter</h2>
+                    <p>
+                        Tamen quem nulla quae legam multos aute sint culpa legam
+                        noster magna
+                    </p>
+                    <div class="newsletter__inner-search">
+                        <div class="newsletter__inner-input">
+                            <input type="text" />
+                        </div>
+                        <div class="search-box">
+                            <span>Subscribe</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
+        <div id="footer">
+            <div class="footer__top">
+                <div class="f1">
+                    <h3>Butterfly</h3>
+                    <p>
+                        A108 Adam Street <br />
+                        New York, NY 535022<br />
+                        United States <br /><br />
+                        <strong>Phone:</strong> +1 5589 55488 55<br />
+                        <strong>Email:</strong> info@example.com<br />
+                    </p>
+                </div>
+
+                <div class="f2">
+                    <h4>Useful Links</h4>
+                    <ul>
+                        <li>
+                            <i class="fa-solid fa-angle-right"></i>
+                            <a href="#">Home</a>
+                        </li>
+                        <li>
+                            <i class="fa-solid fa-angle-right"></i>
+                            <a href="#">About us</a>
+                        </li>
+                        <li>
+                            <i class="fa-solid fa-angle-right"></i>
+                            <a href="#">Services</a>
+                        </li>
+                        <li>
+                            <i class="fa-solid fa-angle-right"></i>
+                            <a href="#">Team of service</a>
+                        </li>
+                        <li>
+                            <i class="fa-solid fa-angle-right"></i>
+                            <a href="#">Privacy policy</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="f2">
+                    <h4>Our Services</h4>
+                    <ul>
+                        <li>
+                            <i class="fa-solid fa-angle-right"></i>
+                            <a href="#"> Web Design</a>
+                        </li>
+                        <li>
+                            <i class="fa-solid fa-angle-right"></i>
+                            <a href="#">Web Development</a>
+                        </li>
+                        <li>
+                            <i class="fa-solid fa-angle-right"></i>
+                            <a href="#">Product Management</a>
+                        </li>
+                        <li>
+                            <i class="fa-solid fa-angle-right"></i>
+                            <a href="#">Marketing</a>
+                        </li>
+                        <li>
+                            <i class="fa-solid fa-angle-right"></i>
+                            <a href="#">Graphic Design</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="f2 our-social-networks">
+                    <h4>Our Social Networks</h4>
+                    <p>
+                        Cras fermentum odio eu feugiat lide par naso <br />
+                        tierra videa magna derita valies
+                    </p>
+                    <ul class="our-social-networks-list">
+                        <li class="our-social-networks-icon">
+                            <a href="#">
+                                <i class="fa-brands fa-twitter"></i>
+                            </a>
+                        </li>
+                        <li class="our-social-networks-icon">
+                            <a href="#">
+                                <i class="fa-brands fa-facebook-f"></i>
+                            </a>
+                        </li>
+                        <li class="our-social-networks-icon">
+                            <a href="#">
+                                <i class="fa-brands fa-instagram"></i>
+                            </a>
+                        </li>
+                        <li class="our-social-networks-icon">
+                            <a href="#">
+                                <i class="fa-brands fa-youtube"></i>
+                            </a>
+                        </li>
+                        <li class="our-social-networks-icon">
+                            <a href="#">
+                                <i class="fa-brands fa-linkedin-in"></i>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="copyright">
+                <div class="copyright-left">
+                    <i class="fa-regular fa-copyright"></i>
+                    <p>
+                        Copyright <strong>Butterfly</strong>. All Rights
+                        Reserved
+                    </p>
+                </div>
+                <div class="copyright-right">
+                    <span>Designed by</span>
+                    <a href="#">BootstrapMade</a>
+                </div>
+            </div>
+        </div>
+
         <script src="./main.js"></script>
     </body>
 </html>
