--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             rel="stylesheet"
         />
         <link rel="stylesheet" href="./assets/style/style.css" />
+        <link rel="stylesheet" href="./assets/style/rp.css" />
     </head>
     <body>
         <div class="header">
