--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
             <li class="item">
               <a href="#">Home</a>
             </li>
-            <li class="item">
+            <!-- <li class="item">
               <a href="#achieved">Thành tích</a>
-            </li>
+            </li> -->
             <li class="item">
               <a href="#services">Hoạt động</a>
             </li>
@@ -99,11 +99,11 @@
             </h1>
             <!-- <h1 class="t2">YOU STOP & STARE</h1> -->
             <p class="c1">
-              Được thành lập vào ngày 29/08/2014, qua
+              Được thành lập vào ngày <strong>29/08/2014</strong>, qua
               <span class="">10</span> năm hình thành và phát triển CLB Hỗ trợ
               kỹ thuật IT Supporter đã có những bước tiến lớn trong quá trình
               trưởng thành của mình. CLB được thành lập với mục đích hỗ trợ
-              những vấn đề liên quan đến kĩ thuật khoa CNTT.
+              những vấn đề liên quan đến kỹ thuật khoa CNTT.
             </p>
             <div class="get-st-box">
               <a>Tham gia</a>
@@ -115,7 +115,8 @@
               alt=""
             /> -->
             <img
-              src="./assets/img/anh_bia.png"
+              width="55%"
+              src="./assets/img/logo10.png"
               alt=""
             />
           </div>
@@ -125,7 +126,7 @@
         <div class="about-video__content inner">
           <div class="l-content col50">
             <img
-              src="./assets/img/video-img.png"
+              src="./assets/img/b1.png"
               alt=""
             />
           </div>
@@ -180,98 +181,7 @@
         <!-- <div class="right"></div> -->
       </div>
       <!-- Achieved -->
-      <div
-        id="achieved"
-        class="achieved"
-      >
-        <div class="achieved__top">
-          <h1 class="achieved__top-title">Thành tích đạt được</h1>
-          <p class="achieved__top-title-desc">
-            Qua 10 năm hình thành và phát triển 2014 - 2024
-          </p>
-          <div class="achieved__statistical">
-            <div class="achieved__statistical-content">
-              <span class="n">232</span>
-              <span class="t">Clients</span>
-            </div>
-            <div class="achieved__statistical-content">
-              <span class="n">521</span>
-              <span class="t">Projects</span>
-            </div>
-            <div class="achieved__statistical-content">
-              <span class="n">1463</span>
-              <span class="t">Hours Of Support</span>
-            </div>
-            <div class="achieved__statistical-content">
-              <span class="n">15</span>
-              <p class="t">Hard Workers</p>
-            </div>
-          </div>
-        </div>
-        <div class="achieved__bottom">
-          <div class="achieved__bottom__inner">
-            <!-- Bảng logo -->
-            <ul class="list">
-              <li class="item img-black-and-white">
-                <img
-                  class="achieved-logo"
-                  src="./assets/img/belimo-logo.png"
-                  alt="belimo-logo"
-                />
-              </li>
-              <li class="item">
-                <img
-                  class="achieved-logo img-black-and-white"
-                  src="./assets/img/belimo-logo.png"
-                  alt="belimo-logo"
-                />
-              </li>
-              <li class="item">
-                <img
-                  class="achieved-logo img-black-and-white"
-                  src="./assets/img/belimo-logo.png"
-                  alt="belimo-logo"
-                />
-              </li>
-              <li class="item">
-                <img
-                  class="achieved-logo img-black-and-white"
-                  src="./assets/img/belimo-logo.png"
-                  alt="belimo-logo"
-                />
-              </li>
-              <li class="item">
-                <img
-                  class="achieved-logo img-black-and-white"
-                  src="./assets/img/belimo-logo.png"
-                  alt="belimo-logo"
-                />
-              </li>
-              <li class="item">
-                <img
-                  class="achieved-logo img-black-and-white"
-                  src="./assets/img/belimo-logo.png"
-                  alt="belimo-logo"
-                />
-              </li>
-              <li class="item">
-                <img
-                  class="achieved-logo img-black-and-white"
-                  src="./assets/img/belimo-logo.png"
-                  alt="belimo-logo"
-                />
-              </li>
-              <li class="item">
-                <img
-                  class="achieved-logo img-black-and-white"
-                  src="./assets/img/belimo-logo.png"
-                  alt="belimo-logo"
-                />
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
+
       <!-- SERVICES -->
       <div
         id="services"
@@ -281,7 +191,7 @@
           <h2>Các hoạt động chính</h2>
           <p>
             CLB Hỗ trợ kỹ thuật IT Supporter có nhiều hoạt động nhằm thúc đẩy sự
-            phát triển kĩ năng của các thành viên và đem đến cho tất cả các bạn
+            phát triển kỹ năng của các thành viên và đem đến cho tất cả các bạn
             sinh viên một địa chỉ tin cậy để giao phó sự tin tưởng của mình
           </p>
         </div>
@@ -373,21 +283,21 @@
           <div class="slider__inner-top">
             <div class="person-img">
               <img
-                src="./assets/img/testimonials-2.png"
+                src="./assets/img/ChuNhiem.jpg"
                 alt="2"
               />
             </div>
-            <h3>Anh Hồ Nam Tú</h3>
+            <h3>Chị Vũ Thị Thái Hà</h3>
             <h4>Chủ nhiệm</h4>
           </div>
 
           <div class="quote">
             <p>
-              <i class="bx bxs-quote-alt-left kep1"></i>
+              <!-- <i class="bx bxs-quote-alt-left kep1"></i> -->
               <span
-                >IT Supporter - Phát huy trách nghiệm phát triển kỹ năng</span
+                >"IT Supporter - Phát huy trách nghiệm phát triển kỹ năng"</span
               >
-              <i class="bx bxs-quote-alt-right kep2"></i>
+              <!-- <i class="bx bxs-quote-alt-right kep2"></i> -->
             </p>
           </div>
         </div>
@@ -396,17 +306,18 @@
       <div class="team">
         <div class="layout-top">
           <h2>THÀNH VIÊN BAN PHỤ TRÁCH</h2>
-          <p>Các "sếp"</p>
+          <p>Các "sếp" 😁</p>
         </div>
         <div class="team__content">
           <div class="team__content-item">
             <img
-              src="./assets/img/team-1.png"
+              src="./assets/img/TrinhNgocHai.jpg"
               alt=""
+              height="305.65"
             />
             <div class="team-i4">
-              <h3>Walter White</h3>
-              <p>Chief Executive Officer</p>
+              <h3>Anh Trịnh Ngọc Hải</h3>
+              <p>Phó chủ nhiệm</p>
             </div>
             <!-- Show Link Icon -->
             <div class="show-team-icon">
@@ -443,8 +354,8 @@
               alt=""
             />
             <div class="team-i4">
-              <h3>Sarah Jhonson</h3>
-              <p>Product Manager</p>
+              <h3>Anh Hoàng Trung Dũng</h3>
+              <p>Phó chủ nhiệm</p>
             </div>
             <!-- Show Link Icon -->
             <div class="show-team-icon">
@@ -480,8 +391,8 @@
               alt=""
             />
             <div class="team-i4">
-              <h3>William Anderson</h3>
-              <p>CTO</p>
+              <h3>Chị Trần Thu Phương</h3>
+              <p>Ủy viên</p>
             </div>
             <!-- Show Link Icon -->
             <div class="show-team-icon">
@@ -517,8 +428,8 @@
               alt=""
             />
             <div class="team-i4">
-              <h3>Amanda Jepson</h3>
-              <p>Accountant</p>
+              <h3>Anh Đỗ Triệu Đức Phương</h3>
+              <p>Ủy viên</p>
             </div>
             <!-- Show Link Icon -->
             <div class="show-team-icon">
@@ -561,55 +472,55 @@
         <div class="gallery-content">
           <div class="gallery-img">
             <img
-              src="./assets/img/gallery-1.png"
+              src="./assets/img/g1.jpg"
               alt="gallery-1"
             />
           </div>
           <div class="div"></div>
           <div class="gallery-img">
             <img
-              src="./assets/img/gallery-2.png"
+              src="./assets/img/g2.jpg"
               alt="gallery-1"
             />
           </div>
           <div class="div"></div>
           <div class="gallery-img">
             <img
-              src="./assets/img/gallery-3.png"
+              src="./assets/img/g3.jpg"
               alt="gallery-1"
             />
           </div>
           <div class="div"></div>
           <div class="gallery-img">
             <img
-              src="./assets/img/gallery-4.png"
+              src="./assets/img/g4.jpg"
               alt="gallery-1"
             />
           </div>
           <div class="gallery-img">
             <img
-              src="./assets/img/gallery-5.png"
-              alt="gallery-1"
-            />
-          </div>
-          <div class="div"></div>
-          <div class="gallery-img">
-            <img
-              src="./assets/img/gallery-6.png"
+              src="./assets/img/g9.jpg"
               alt="gallery-1"
             />
           </div>
           <div class="div"></div>
           <div class="gallery-img">
             <img
-              src="./assets/img/gallery-7.png"
+              src="./assets/img/g6.jpg"
               alt="gallery-1"
             />
           </div>
           <div class="div"></div>
           <div class="gallery-img">
             <img
-              src="./assets/img/gallery-8.png"
+              src="./assets/img/g7.jpg"
+              alt="gallery-1"
+            />
+          </div>
+          <div class="div"></div>
+          <div class="gallery-img">
+            <img
+              src="./assets/img/g8.jpg"
               alt="gallery-1"
             />
           </div>
@@ -626,7 +537,7 @@
         </div>
         <div class="contact-content">
           <iframe
-            src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d7446.924040559256!2d105.73551479999999!3d21.0542014!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1svi!2s!4v1661882800419!5m2!1svi!2s"
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3723.470791359761!2d105.7324846750253!3d21.053850786916833!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31345457e292d5bf%3A0x20ac91c94d74439a!2zVHLGsOG7nW5nIMSQ4bqhaSBo4buNYyBDw7RuZyBuZ2hp4buHcCBIw6AgTuG7mWk!5e0!3m2!1svi!2s!4v1725046736642!5m2!1svi!2s"
             width="1296"
             height="270"
             style="border: 0"
@@ -663,7 +574,7 @@
                 </div>
                 <div class="title-desc">
                   <a href="#">Hotline:</a>
-                  <p class="bottom">+84 398 812 298</p>
+                  <p class="bottom">0965 530 897</p>
                 </div>
               </div>
             </div>
@@ -736,7 +647,7 @@
           <p>
             Văn phòng Đoàn Thanh Niên, <br />Tầng 8, nhà A1, trường Đại Học Công
             nghiệp Hà Nội Hà Nội, Hanoi, Vietnam <br /><br />
-            <strong>Phone:</strong> +84 398 812 298 (Anh Hồ Nam Tú - Chủ
+            <strong>Phone:</strong> 0965 530 897 (Chị Vũ Thị Thái Hà - Chủ
             nhiệm)<br />
             <strong>Email:</strong> it.supporter@fit-haui.edu.vn<br />
           </p>
@@ -751,19 +662,19 @@
             </li>
             <li>
               <i class="fa-solid fa-angle-right"></i>
-              <a href="#">About us</a>
+              <a href="#services">Hoạt động</a>
             </li>
             <li>
               <i class="fa-solid fa-angle-right"></i>
-              <a href="#">Services</a>
+              <a href="#slider">Ban phụ trách</a>
             </li>
             <li>
               <i class="fa-solid fa-angle-right"></i>
-              <a href="#">Team of service</a>
+              <a href="#gallery">Thư viện ảnh</a>
             </li>
             <li>
               <i class="fa-solid fa-angle-right"></i>
-              <a href="#">Privacy policy</a>
+              <a href="#contact">Liên hệ</a>
             </li>
           </ul>
         </div>
@@ -802,27 +713,7 @@
           <ul class="our-social-networks-list">
             <li class="our-social-networks-icon">
               <a href="#">
-                <i class="fa-brands fa-twitter"></i>
-              </a>
-            </li>
-            <li class="our-social-networks-icon">
-              <a href="#">
                 <i class="fa-brands fa-facebook-f"></i>
-              </a>
-            </li>
-            <li class="our-social-networks-icon">
-              <a href="#">
-                <i class="fa-brands fa-instagram"></i>
-              </a>
-            </li>
-            <li class="our-social-networks-icon">
-              <a href="#">
-                <i class="fa-brands fa-youtube"></i>
-              </a>
-            </li>
-            <li class="our-social-networks-icon">
-              <a href="#">
-                <i class="fa-brands fa-linkedin-in"></i>
               </a>
             </li>
           </ul>
@@ -831,9 +722,29 @@
       <div class="copyright">
         <div class="copyright-left">
           <!-- <i class="fa-regular fa-copyright"></i> -->
-          <p>
+          <!-- <p>
             Copyright<i class="fa-regular fa-copyright"></i>2024
             <strong>DDung203</strong>
+          </p> -->
+
+          <!-- <p style="font-family: Arial, Helvetica, sans-serif">
+            Copyright &copy; DDung203
+          </p> -->
+
+          <p>
+            <span style="font-family: Arial, Helvetica, sans-serif"
+              >&copy; 2022 -
+              <script>
+                document.write(new Date().getFullYear());
+              </script></span
+            >
+            Made by
+            <a
+              class="copyright-right"
+              href="https://github.com/Ddung203"
+              target="_blank"
+              >DDung203</a
+            >
           </p>
         </div>
         <div class="copyright-right">
